# wxOpenCV

./: CMakeLists.txt  README.md
src/: worker.cpp  wxopencv.cpp
src/camera/: camera.cpp  camera.h
src/gui/: about.cpp  camview.cpp  camview.h  frame.cpp  frame.h
